welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:36: error: illegal start of simple expression
  if (!estFaceMur())) {
                    ^